--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-    --cor-principal: hsl(115, 65%, 15%);
-    --cor-secundaria: #3cff00;
-    --cor-destaque: #c0d853;
+    --cor-principal: hsl(207, 42%, 30%);
+    --cor-secundaria: #2fc7e2;
+    --cor-destaque: #29334e;
 }
 
 body {
